fix JwtService test